--- a/udagram-stack.yml
+++ b/udagram-stack.yml
@@ -1,33 +1,52 @@
-Parameters:
-  # Paramenters are entirely optional.
-  # but using them will make your cloudformation templates more reusable
-  # use them for things that may change over time, such as instance type,
-  # VPCs and so on.
-Resources:
-  # instace profile contains the IAM Role name(s) that we want to associate to our auto scaling EC2 Servers
-  # never give too much permissions to your EC2 instances! if they get hacked, the permissions get hacked also!
-  # in this example, I create a Role called UdacityS3ReadOnlyC2 and just give it a policy of S3 Read-Only Access
-  ProfileWithRolesForOurApp:
-    Type: AWS::IAM::InstanceProfile
-    Properties: 
-      Roles:
-        - UdacityS3ReadOnlyEC2
-Outputs: 
-  # This is also optional.
-  # Bonus points for useful outputs!
-  # for example, if you create a Load Balancer
-  # it's nice to output the URL to it here, so that we don't have to go to the console to get it.
+AWSTemplateFormatVersion: "2010-09-09"
+Description: >
+  Name: Darren Foley
+  Email: darrenfoley015@gmail.com
+  Desc: Parent Template configuration which calls the project substacks.
 
-# Sample UserData
-# When creating your Launch Configuration, you may need a UserData script
-# here's one that you can use for Ubuntu Linux that will:
-# Install Apache Web Server, Start it, and create an index.html that will be displayed
-# when you visit the IP address of this server with your web browser
-#Here it is:
-#
-#          #!/bin/bash
-#          apt-get update -y
-#          apt-get install apache2 -y
-#          systemctl start apache2.service
-#          cd /var/www/html
-#          echo "Udacity Demo Web Server Up and Running!" > index.html
+# Parameters:
+#   EnvironmentType:
+#     Description: Type of environment
+#     Type: 'AWS::SSM::Parameter::Value<String>'
+#     Default: '/TEST'
+
+#   EnvironmentName:
+#     Description: Unique Identifier for project environment
+#     Type: 'AWS::SSM::Parameter::Value<String>'
+#     Default: '/TEST/EnvironmentName'
+
+Resources:
+
+  ParamModule:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./substacks/variables.yml
+      Parameters: ./project-parameters.json
+  
+  ServiceModule:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./substacks/services.yml
+    DependsOn: ParamModule
+
+  NetworkModule:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./substacks/network.yml
+    DependsOn: ParamModule
+
+  ServerModule:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./substacks/servers.yml
+    DependsOn: NetworkModule
+  
+  # DatabaseModule:
+  #   Type: AWS::CloudFormation::Stack
+  #     Properties:
+  #       TemplateURL: ./substacks/servers.yml
+  #     DependsOn: ServerModule
+
+  
+
+    
