Added github workflow for S3 deployment

--- a/substacks/servers.yml
+++ b/substacks/servers.yml
@@ -185,3 +185,11 @@ Resources:
       VpcId: 
         Fn::ImportValue:
           Fn::Sub: '${EnvironmentName}-${EnvironmentType}-VPCID'
+
+
+Outputs:
+  LoadBalancerURL:
+    Description: Export of Load Balancer URL
+    Value: Fn::Join: ["", [ "http://", !GetAtt [ WebAppLB , DNSName] ] ]
+    Export:
+      Name: !Sub "${EnvironmentName}-${EnvironmentType}-DNSName"
