Added new variable for ec2 instance role, updated launch config

--- a/project-parameters.json
+++ b/project-parameters.json
@@ -62,5 +62,9 @@
   {
     "ParameterKey": "AutoScalingMaxSize",
 		"ParameterValue": "6"
+  },
+  {
+    "ParameterKey": "UdagramS3Role",
+		"ParameterValue": "UdagramS3ReadOnlyEC2"
   }
 ]
