--- a/project-parameters.json
+++ b/project-parameters.json
@@ -66,5 +66,9 @@
   {
     "ParameterKey": "UdagramS3Role",
 		"ParameterValue": "UdagramS3ReadOnlyEC2"
+  },
+  {
+    "ParameterKey": "DatabaseUsername",
+		"ParameterValue": "UdagramUser"
   }
 ]
